--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ EMAIL: nathantv@uci.edu
   <meta name="Portfolio" content="Portfolio: About, Resume, Projects, and Contact">
 
   <!-- you would link to an external stylesheet here! -->
-  <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="index.css">
 
   <!--Add icon library-->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
